   this occurs to be overriden using sound_participants_unmuted and
   sound_participants_muted.

 * Added menu action participant_count.  This will playback the number of
   current participants in a conference.

 * Added announcement configuration option to user profile. If set the sound
   file will be played to the user, and only the user, upon joining the
   conference bridge.


Dial
-------------------
 * Added 'b' and 'B' options to Dial that execute a Gosub on callee and caller
   channels respectively before the callee channels are called.


ExternalIVR
-------------------
 * Added support for IPv6.

 * Add interrupt ('I') command to ExternalIVR.  Sending this command from an
   external process will cause the current playlist to be cleared, including
   stopping any audio file that is currently playing.  This is useful when you
   want to interrupt audio playback only when specific DTMF is entered by the
   caller.


FollowMe
-------------------
 * A new option, 'I' has been added to app_followme. By setting this option,
   Asterisk will not update the caller with connected line changes when they
   occur.  This is similar to app_dial and app_queue.

 * The 'N' option is now ignored if the call is already answered.

 * Added 'b' and 'B' options to FollowMe that execute a Gosub on callee
   and caller channels respectively before the callee channels are called.

 * The winning FollowMe outgoing call is now put on hold if the caller put it on
   hold.


MixMonitor
------------------
 * MixMonitor hooks now have IDs associated with them which can be used to
   assign a target to StopMixMonitor. Use of MixMonitor's i(variable) option
   will allow storage of the MixMontior ID in a channel variable. StopMixmonitor
   now accepts that ID as an argument.

 * Added 'm' option, which stores a copy of the recording as a voicemail in the
   indicated mailboxes.


MySQL
-------------------
 * The connect action in app_mysql now allows you to specify a port number to